# iAnt-ARGoS

./: .gitignore  CMakeLists.txt  DiamondPatternOutPut.txt  Doxyfile  GA.py  README.md  SquarePatternOutPut.txt  TODO and Notes  a.out  build.sh  buildAndRun.sh  foraging.txt  iAnt.argos  iAntFoodPosition.txt  iAntSpiralTagData.txt  iAntTagData.csv  iAntTagData.txt  linearSpiral.cpp  linearSpiral2.0.cpp  multSpiralsPattern.txt  run.sh
CPFA/: shoot.sh
CPFA/experiments/: cluster_CPFA_linux.argos  cluster_CPFA_mac.argos  iAnt_linux.argos  iAnt_mac_origin.argos  powerlaw_CPFA_linux.argos  powerlaw_CPFA_mac.argos  random_CPFA_linux.argos  random_CPFA_mac.argos
CPFA/source/: CMakeLists.txt  iAnt_controller.cpp  iAnt_controller.h  iAnt_data.cpp  iAnt_data.h  iAnt_loop_functions.cpp  iAnt_pheromone.cpp  iAnt_qt_user_functions.cpp  iAnt_qt_user_functions.h
MPFA/: experiments.py
MPFA/2nests_MPFA_GA/: CopyData.py  argos_util.py  experiments_Linux.py  experiments_Mac.py  ga.py  ga.py~  many_heatmap.py  plot_collection.py  shoot_linux.sh  shoot_mac.sh
MPFA/4nests_MPFA_GA/: ChangePointCreator.py  cusum.py  data_plotter.py  doexperiments.sh  experiments_Mac.py
MPFA/8nests_MPFA_GA/: experiments_Mac.py  param_bar_plot.py  rebuild.sh
MPFA/experiments/: iAnt_linux.argos  none_evolved.argos
MPFA/source/: CMakeLists.txt  CMakeLists.txt~  iAnt_controller.cpp  iAnt_controller.h  iAnt_data.cpp  iAnt_data.h  iAnt_loop_functions.cpp  iAnt_nest.cpp  iAnt_nest.h  iAnt_pheromone.h  iAnt_qt_user_functions.cpp  iAnt_qt_user_functions.h
controllers/: CMakeLists.txt  iAnt_controller.cpp  iAnt_controller.h  iAnt_data.cpp  iAnt_data.h  iAnt_food_type.h  iAnt_pheromone.cpp  iAnt_pheromone.h
controllers/footbot_synchronization/: CMakeLists.txt
controllers/iAnt_controller/: CMakeLists.txt  iAnt_controller.cpp  iAnt_controller.h  iAnt_pheromone.cpp  iAnt_pheromone.h
dataFiles(SingleRobot)/: simTimesforData.txt
dataFiles(SingleRobot)/clusterSpiraldata/: iAntSpiralTagData40C.txt  iAntSpiralTagData50C.txt
dataFiles(SingleRobot)/matlabPlotFiles/: CPFAvsSpiral3x2.fig  dataRead.m  iAntSpiralTagData10C.txt  iAntSpiralTagData20C.txt  iAntSpiralTagData20P.txt  iAntSpiralTagData20R.txt  iAntSpiralTagData30R.txt  iAntSpiralTagData50P.txt  iAntSpiralTagData50R.txt  iAntSpiralTagData60C.txt  iAntSpiralTagData60P.txt  plotCPFAdata.m
dataFiles(SingleRobot)/matlabSpiderSearch1Robot/: findNextDirSq.m  insertSqPattern.m  insertStairPattern.m  linearSpiral.m  parsingPattern.m  patternHelper.m  plotPattern.m
dataFiles(SingleRobot)/powerSpiraldata/: iAntSpiralTagData10P.txt  iAntSpiralTagData30P.txt  iAntSpiralTagData40P.txt
dataFiles(SingleRobot)/randomSprialdata/: iAntSpiralTagData10R.txt  iAntSpiralTagData40R.txt  iAntSpiralTagData60R.txt
documentation/html/: _c_p_f_a.html  _c_p_f_a__controller_8h_source.html  _c_p_f_a__loop__functions_8h_source.html  _d_s_a__controller_8h_source.html  _d_s_a__loop__functions_8h_source.html  annotated.html  class_c_p_f_a__controller-members.html  class_c_p_f_a__controller.html  class_c_p_f_a__loop__functions-members.html  class_c_p_f_a__loop__functions.html  class_d_s_a__controller-members.html  class_d_s_a__controller.html  class_d_s_a__loop__functions.html  classes.html  classi_ant_base_controller-members.html  classi_ant_base_controller.html  classi_ant_food.html  classi_ant_pheromone.html  dir_0c2cd29472c40793579042098f322910.html  dir_3b1ed92bc488ccb705d7c31ec9add70b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_caab8edf0da31fb65fac2bc476c3e76b.html  dir_edeb3d8208f140032f875d2a50747d46.html  files.html  functions.html  functions_func.html  hierarchy.html  i_ant_base_controller_8h_source.html  i_ant_food_8h_source.html  index.html  (+3 more)
experiments/: CPFA.xml  DSA.xml  iAnt.argos  iAnt.xml  iAntNew.xml  iAnt_ClusteredDistributionTest.argos  iAnt_PowerLawDistributionTest.argos  iAnt_RandomDistributionTest.argos  iAnt_linux.argos  iAnt_mac.argos  trajectory.argos
iAnt-ARGoS-master/: .gitignore  CMakeLists.txt  argosBashScript.sh  random_argos.py
iAnt-ARGoS-master/Stimulation/StimulationbyHand/tables/: ClusterDistrib.txt  PowerLawDistrib.txt  RandomDistrib.txt~  myScript.m  plotting.m  plotting2.m
iAnt-ARGoS-master/bash script/: README  README.txt  argosBashScript.sh~  argosBashScript2.sh  random_argos(broken).py
iAnt-ARGoS-master/controllers/: CMakeLists.txt  iAnt_controller.cpp  iAnt_controller.h  iAnt_pheromone.cpp
iAnt-ARGoS-master/experiments/: CompilingARGoS.txt  iAnt_linux.argos  iAnt_mac.argos  iAnt_macCluster.argos  iAnt_macOriginal.argos  iAnt_macPower.argos  iAnt_macRandom.argos
iAnt-ARGoS-master/loop_functions/: iAnt_loop_functions.h  iAnt_qt_user_functions.cpp  iAnt_qt_user_functions.h
loop_functions/: CMakeLists.txt  iAnt_loop_functions.cpp  iAnt_loop_functions.h  iAnt_qt_user_functions.cpp  iAnt_qt_user_functions.h
loop_functions/iAnt_loop_functions/: CMakeLists.txt  TODO and Notes  iAnt_loop_functions.cpp  iAnt_loop_functions.h  iAnt_qt_user_functions.cpp  iAnt_qt_user_functions.h
source/: CMakeLists.txt  DSA_controller.cpp  DSA_controller.h  DSA_loop_functions.cpp  DSA_loop_functions.h  a.out  iAnt_controller.cpp  iAnt_controller.h  iAnt_data.cpp  iAnt_data.h  iAnt_loop_functions.cpp  iAnt_loop_functions.h  iAnt_pheromone.cpp  iAnt_pheromone.h  iAnt_qt_user_functions.cpp  iAnt_qt_user_functions.h
source/CPFA/: CMakeLists.txt  CPFA_controller.cpp  CPFA_controller.h  CPFA_loop_functions.cpp  CPFA_loop_functions.h  CPFA_qt_user_functions.cpp  CPFA_qt_user_functions.h
source/DSA/: CMakeLists.txt  DSA_controller.cpp  DSA_controller.h  DSA_loop_functions.cpp  DSA_loop_functions.h  DSA_qt_user_functions.cpp  DSA_qt_user_functions.h
source/iAntBase/: CMakeLists.txt  iAntBaseController.cpp  iAntBaseController.h  iAntFood.cpp  iAntFood.h  iAntPheromone.cpp  iAntPheromone.h
test files/: N S E S W S N W N W N E N E N S E S E S  a.out  iAnt_controllerOLD.cpp  iAnt_controllerOLD2.cpp  iAnt_controllerWORKING.cpp  iterator  iterator.cpp  linearSpiralOLD.cpp  multiSpiral.cpp  sample.cpp  sampleWVectors.cpp  temppattern.cpp  testingVectors.cpp
(+189 files in other folders)
